--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -497,10 +497,10 @@ textarea {
 /*
  * Remove most spacing between table cells
  */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
+/*table {*/
+  /*border-collapse: collapse;*/
+  /*border-spacing: 0;*/
+/*}*/
 
 body {
   font: 14px/22px "Quattrocento Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -516,9 +516,9 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0 0 10px;
 }
 
-p, ul, ol, table, pre, dl {
-  margin: 0 0 20px;
-}
+/*p, ul, ol, table, pre, dl {*/
+  /*margin: 0 0 20px;*/
+/*}*/
 
 h1, h2, h3 {
   line-height: 1.1;
@@ -565,8 +565,7 @@ strong {
 }
 
 .wrapper {
-  width: 650px;
-  margin: 0 auto;
+  margin-left: 5px;
   position: relative;
 }
 
@@ -615,27 +614,27 @@ pre code {
   padding: 0px;
 }
 
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
+/*table {*/
+  /*width: 100%;*/
+  /*border-collapse: collapse;*/
+/*}*/
 
-th {
-  text-align: left;
-  padding: 5px 10px;
-  border-bottom: 1px solid #e5e5e5;
-  color: #444;
-}
+/*th {*/
+  /*text-align: left;*/
+  /*padding: 5px 10px;*/
+  /*border-bottom: 1px solid #e5e5e5;*/
+  /*color: #444;*/
+/*}*/
 
-td {
-  text-align: left;
-  padding: 5px 10px;
-  border-bottom: 1px solid #e5e5e5;
-  border-right: 1px solid #ffcc00;
-}
-td:first-child {
-  border-left: 1px solid #ffcc00;
-}
+/*td {*/
+  /*text-align: left;*/
+  /*padding: 5px 10px;*/
+  /*border-bottom: 1px solid #e5e5e5;*/
+  /*border-right: 1px solid #ffcc00;*/
+/*}*/
+/*td:first-child {*/
+  /*border-left: 1px solid #ffcc00;*/
+/*}*/
 
 hr {
   border: 0;
@@ -792,7 +791,7 @@ header p {
 }
 
 section {
-  width: 590px;
+  width: 999px;
   padding: 30px 30px 50px 30px;
   margin: 20px 0;
   margin-top: 190px;
